@@ -1,5 +1,10 @@
 2006-07-25 Johan Bilien <johan.bilien@nokia.com>
 
+	* hildon-control-panel-main.c: Added D-Bus RPC handler to query
+	  if an applet is running
+
+2006-07-25 Johan Bilien <johan.bilien@nokia.com>
+
 	* hildon-control-panel-main.c: Restart the proper applet after coming
 	  back from bg-killing (Closes NB#35677)
 
